--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+/* I am the inter font */
+
 body {
-    font-family: "Open Sans", sans-serif;
     background-color: #ffffff;
     font-size: 22px;
     margin: 0;
@@ -11,9 +13,15 @@ body {
     margin: 0 auto;
 }
 
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
 /* Nav area begins (Used on subpage2) */
 
 nav {
+    font-family: "Inter", sans-serif;
     background-color: #FAEBD7;
     display: flex;
     justify-content: space-between;
@@ -55,22 +63,62 @@ nav .links a:hover {
 
 /* Shoe category grid begins */
 
+.title {
+    font-family: "Arial", sans-serif;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: -20px;
+    color: #2F4F4F;
+}
+
 .shoe-grid {
+    font-family: "Inter", sans-serif;
     display: grid;
-    grid-template-columns: 3, 2;
+    grid-template-columns: auto auto auto;
     gap: 20px;
-    padding: 20px;
+    padding: 50px;
 }
 
 .shoe-card {
-    border-radius: 10px;
+    border-radius: 5px;
+    border: #0A3943 2px solid;
     padding: 10px;
     text-align: center;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
 }
 
 .card-img {
     width: 200px;
     height: auto;
 }
+
+/* Shoe category grid ends */
+
+/* Footer area begins */
+
+footer {
+    font-family: "Inter", sans-serif;
+    background-color: #FAEBD7;
+    color: #2F4F4F;
+    padding: 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    max-height: 100px;
+}
+
+footer a {
+    color: #2F4F4F;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #0A3943;
+}
+
+.footer-links .right-footer-links {
+    display: flex;
+}
+/* Footer area ends */
 
